@@ -1,6 +1,11 @@
 # $Id$
 #
-# The most simplistic Makefile, for DJGPP on MS-DOS
+# The most simplistic Makefile, for DJGPP Version 2 on Windows
+#
+# Rather than using this makefile, it is preferable to run "configure", then
+# "make" under BASH on DJGPP (i.e. the standard means of building a package on
+# Unix), but you have to have a fuller complement of DJGPP packages installed
+# to do this.
 
 include source.mak
 
